# aliens-of-mount-rushmore

./: README.md  pyproject.toml
accounts/migrations/: 0002_alter_customuser_id.py
aliens/: admin.py  apps.py  models.py  urls.py  views.py
aliens/migrations/: 0001_initial.py  0002_rename_given_name_alien_given_name_of_subject.py
config/: settings.py  urls.py
templates/: _base.html
templates/aliens/: alien_create.html  alien_delete.html  alien_detail.html  alien_list.html  alien_update.html
