[tool.poetry]
name = "aliens-of-mount-rushmore"
version = "0.1.0"
description = ""
authors = ["Samuel Panek <samuelrpanek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-allauth = "^0.47.0"
django-debug-toolbar = "^3.2.4"
whitenoise = "^5.3.0"
django-crispy = "^1.8.1"
django-crispy-forms = "^1.13.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
